app/css/app.styl
html
  overflow-x hidden
  max-width 100%

.menu
  position fixed
  z-index 99

#book
  position relative
  width 300vw
  height 100%

#page_2
  background-color #FFF
  left 100vw
  height auto
  
#page_3
  background-color #FFF
  left 200vw
  height auto

// vi:et:nowrap:sw=2:ts=2

